[gd_scene load_steps=21 format=3 uid="uid://cebqlld4ws2yt"]

[ext_resource type="Texture2D" uid="uid://b5hymo20jb5sa" path="res://GUI/player_hud/gui-health.png" id="1_alx7a"]
[ext_resource type="Script" uid="uid://d34gqlcplff3r" path="res://GUI/player_hud/player_hud.gd" id="1_oghrr"]
[ext_resource type="PackedScene" uid="uid://6ik1hwolfiq0" path="res://GUI/player_hud/heart_gui.tscn" id="2_oghrr"]
[ext_resource type="FontFile" uid="uid://cdoaw5mbxum1d" path="res://GUI/fonts/Abaddon Bold.ttf" id="4_4b3j6"]
[ext_resource type="Texture2D" uid="uid://cnheprbj3dc0t" path="res://GUI/player_hud/boss-hp.png" id="5_sysqg"]
[ext_resource type="FontFile" uid="uid://b4rp70lyqgf78" path="res://GUI/fonts/m5x7.ttf" id="6_rxq5y"]
[ext_resource type="Script" uid="uid://dk3kq7vr1qpg5" path="res://GUI/player_hud/notifications.gd" id="7_scbx3"]
[ext_resource type="Texture2D" uid="uid://bxfwsslb6gcov" path="res://GUI/player_hud/panel_notification.png" id="8_terqw"]
[ext_resource type="AudioStream" uid="uid://cugklxafoeytd" path="res://GUI/player_hud/notification.wav" id="9_ea3vn"]

[sub_resource type="FontVariation" id="FontVariation_yhjvm"]
base_font = ExtResource("4_4b3j6")
spacing_glyph = 2

[sub_resource type="Animation" id="Animation_rxq5y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(194, 89)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(166, 134)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VBoxContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_sysqg"]
resource_name = "fade_to_black"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(194, 89)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(166, 134)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VBoxContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4b3j6"]
resource_name = "show_game_over"
length = 4.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeToBlack:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 3.09942),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.2, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(194, 112), Vector2(194, 89)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.2, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(166, 121), Vector2(166, 134)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.2, 3.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VBoxContainer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.2, 3.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bkpt"]
_data = {
&"RESET": SubResource("Animation_rxq5y"),
&"fade_to_black": SubResource("Animation_sysqg"),
&"show_game_over": SubResource("Animation_4b3j6")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_5bkpt"]
atlas = ExtResource("5_sysqg")
region = Rect2(9, 40, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_scbx3"]
atlas = ExtResource("5_sysqg")
region = Rect2(40, 40, 15, 15)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3m3x0"]
content_margin_left = 12.0
content_margin_top = 6.0
content_margin_right = 12.0
content_margin_bottom = 12.0
texture = ExtResource("8_terqw")
texture_margin_left = 18.0
texture_margin_top = 18.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="Animation" id="Animation_e1kye"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5nb4v"]
resource_name = "show_notification"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(5, 0), Vector2(5, 5), Vector2(5, 5), Vector2(5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_ea3vn")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w5viu"]
_data = {
&"RESET": SubResource("Animation_e1kye"),
&"show_notification": SubResource("Animation_5nb4v")
}

[node name="PlayerHud" type="CanvasLayer"]
layer = 2
script = ExtResource("1_oghrr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(409, 9)
texture = ExtResource("1_alx7a")
region_enabled = true
region_rect = Rect2(29, 0, 34, 8)

[node name="HFlowContainer" type="HFlowContainer" parent="Control"]
layout_mode = 0
offset_left = 346.0
offset_top = 17.0
offset_right = 476.0
offset_bottom = 41.0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 2
alignment = 1

[node name="Heart" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart2" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart3" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart4" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart5" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart6" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart7" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart8" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart9" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart10" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart11" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart12" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart13" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart14" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart15" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart16" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart17" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart18" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart19" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="Heart20" parent="Control/HFlowContainer" instance=ExtResource("2_oghrr")]
layout_mode = 2

[node name="GameOver" type="Control" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Label" type="Label" parent="Control/GameOver"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_yhjvm")
text = "GAME OVER"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOver"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -1.0
offset_right = 75.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="Control/GameOver/VBoxContainer"]
layout_mode = 2
text = "continue"

[node name="TitleButton" type="Button" parent="Control/GameOver/VBoxContainer"]
layout_mode = 2
text = "back to title"

[node name="FadeToBlack" type="ColorRect" parent="Control/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/GameOver"]
libraries = {
&"": SubResource("AnimationLibrary_5bkpt")
}

[node name="BossUI" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control/BossUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = 3.0
offset_right = 85.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
value = 80.0
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_5bkpt")
texture_progress = SubResource("AtlasTexture_scbx3")

[node name="NinePatchRect" type="NinePatchRect" parent="Control/BossUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -6.0
offset_right = 92.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_sysqg")
region_rect = Rect2(0, 0, 64, 30)
patch_margin_left = 22
patch_margin_right = 25
axis_stretch_horizontal = 1

[node name="Label" type="Label" parent="Control/BossUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 9.0
offset_right = 31.0
offset_bottom = 27.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_rxq5y")
text = "Dark Wizard"
horizontal_alignment = 1

[node name="Notification" type="Control" parent="Control"]
process_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("7_scbx3")

[node name="PanelContainer" type="PanelContainer" parent="Control/Notification"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 249.0
offset_bottom = 53.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3m3x0")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Notification/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Notification/PanelContainer/VBoxContainer"]
modulate = Color(1, 0.934977, 0.767445, 1)
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_rxq5y")
text = "Notification Type"
autowrap_mode = 2

[node name="Label2" type="Label" parent="Control/Notification/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_rxq5y")
text = "Notification Message"
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Notification"]
libraries = {
&"": SubResource("AnimationLibrary_w5viu")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
